Adds 3 new buttons: reserve the makerspace, request training, and our discord server invite link

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -14,14 +14,20 @@
 			The makerspace occupancy has been limited to 20 due to the COVID-19 pandemic.
 		  </p>
           <div class="hero__buttons">
-            <a href="{{ site.email_updates_url }}" class="button">
-              Sign up for updates!
+			<a href="{{ site.training_request_url }}" class="button">
+              Sign up for training
             </a>
+			<a href="{{ site.alley_reserve_form_url }}" class="button">
+              Reserve the Makerspace
+            </a></br>
             <a href="{{ site.facebook_url }}" class="button" target="_blank">
               <i class="fa fa-facebook"></i>
             </a>
             <a href="{{ site.instagram_url }}" class="button" target="_blank">
               <i class="fa fa-instagram"></i>
+            </a>
+			<a href="https://discord.gg/rwchwXNqWB" class="button">
+				Discord
             </a>
           </div>
         </div>
