Updates our hours to include the most recent level-5 order

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,11 +10,8 @@
             Your space to<br/>
             bring projects to life
           </h1>
-		  <p style="color: #FFFFFF; font-size: 16px; margin: 0px 0 5px;">
-			The makerspace occupancy has been limited to 20 due to the COVID-19 pandemic.
-		  </p>
-		   <p style="color: #FFFFFF; font-size: 16px; margin: 0px 0 35px;">
-			The makerspace will be closed from Nov 20th to Nov 30th for Thanksgiving Break!
+		   <p style="color: #FFFFFF; font-size: 16px; margin: 0px 0 40px;">
+			The makerspace is closed until the spring semester 2021.
 		  </p>
           <div class="hero__buttons">
 			<a href="{{ site.training_request_url }}" class="button">
