--- a/_sass/wiki.scss
+++ b/_sass/wiki.scss
@@ -53,3 +53,20 @@
 	cursor: pointer;
   }
 }
+
+.blueArrow {
+  border: solid $blue;
+  margin-bottom: 5px;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.wikiContent {
+	 display: none;
+}
