--- a/_sass/archiveWiki.scss
+++ b/_sass/archiveWiki.scss
@@ -9,7 +9,7 @@
 
 .show {display:block;}
 
-.arrow {
+.archiveArrow {
   border: solid $green;
   margin-bottom: 5px;
   border-width: 0 4px 4px 0;
@@ -17,7 +17,7 @@
   padding: 5px;
 }
 
-.right {
+.archiveRight {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
 }
